# Turtlebot_PathPlanning_SLAM

./: Astar4Gridworld.py  CMakeLists.txt  CPSC-5207EL-02_ Assignment 4.docx  CPSC_5207EL02_A4_G8.docx  GetMapObstacles.srv  Gridworld10x10.py  MoveGrid.srv  MoveRobot.action  PlanPath.srv  Point2D.msg  custom_turtlebot3_world.world  custom_world.launch.py  goal_commander_node.py  image_processing_node.py  map_update_node.py  motion_control_node.py  path_planning_node.py  setup.py  ~$SC_5207EL02_A4_G8.docx
wilson/: Astar.py  Navigation_a4.py  a4g16.rar  navigation_move_cam.py  path_planning.py  test.py
wilson/a4g16/a4g16/: CMakeLists.txt
wilson/a4g16/a4g16/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
wilson/a4g16/a4g16/install/a4g16/lib/a4g16/: astar_node
wilson/a4g16/a4g16/install/a4g16/share/a4g16/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
wilson/a4g16/a4g16/install/a4g16/share/a4g16/cmake/: a4g16Config.cmake  ament_cmake_export_dependencies-extras.cmake
wilson/a4g16/a4g16/install/a4g16/share/a4g16/launch/: a4_world.py  gazebo_launch.py  launch_spawn.py  my_navigation_launch.py
wilson/a4g16/a4g16/install/a4g16/share/a4g16/worlds/: aturtlebot3_dqn_stage1.world  gridworld.world  simple_world_a4.world  task1.world  turtlebot3_dqn_stage1 (copy).world  turtlebot3_dqn_stage1_original.world
wilson/a4g16/a4g16/install/a4g16/share/ament_index/resource_index/package_run_dependencies/: a4g16
wilson/a4g16/a4g16/launch/: a4task1.py  turtlebot3_dqn_stage1.launch.py
wilson/a4g16/a4g16/worlds/: turtlebot3_dqn_stage1.world
